<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woods"
    android:orientation="vertical"
    tools:context=".SubmitComplaint">

    <TextView
        android:id="@+id/add_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/add_data_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/add_complaint_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/add_data_field_username"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_usernameField"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="15dp"
        android:hint="Enter Username"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:text=""
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/add_complaint_email_address"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/add_data_field_email_address"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_complaintEmailField"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="15dp"
        android:hint="E-mail Address"
        android:paddingLeft="20dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/add_complaint_phone_number"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/add_data_field_phone_number"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_complaint_phoneNumberField"
        android:layout_height="36dp"
        android:drawableLeft="@drawable/ic_phone_android_black_24dp"
        android:drawablePadding="15dp"
        android:hint="@string/phone_number_lbl"
        android:layout_width="match_parent"
        android:paddingLeft="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/add_complaint_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="18dp"
        android:text="@string/add_data_field_problem"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_complaint_fieldProblem"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_report_problem_black_24dp"
        android:drawablePadding="15dp"
        android:hint="@string/problem_lbl"
        android:paddingLeft="20dp"
        android:ems="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:text="@string/add_data_button_save"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:text="@string/add_data_button_back"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>