<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woods"
    android:orientation="vertical"
    tools:context=".ContactUsActivity">

    <TextView
        android:id="@+id/contactUsTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submitComplaintBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_round"
        android:text="@string/main_submit_complaint"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/checkComplaintsBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:text="@string/main_check_complaints"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>